--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,42 +1,74 @@
-*{
-    padding:0;
+* {
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     min-width: 300px;
+    max-width: 2000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-
-nav{
+nav {
     height: 100vh;
     width: 25%;
-    background-color: red;
+    background-color: #3B3E98;
 }
 
-#container{
+#container {
     display: flex;
+    height: 100vh;
+    border-right: solid 10px #3B3E98;
 }
 
-.container{
+#resultaat-container {
     width: 75%;
     height: 100vh;
-    /* background-color: antiquewhite; */
+    display: block;
 }
 
 
+#terug_button{
+    display: none;
+}
+
+/* alles voor de settings deel */
+
+#container_settings {
+    background-color: #3B3E98;
+    display: none;
+    justify-content: space-around;
+}
+
+#setting-page {
+    height: 100vh;
+    width: 100%;
+    /* display: flex; */
+    /* justify-content: center; */
+}
 
 
 /* voor de nav */
-h1{
-    width: 100%;
-    height: 10%;
+
+h1 {
+    background-color: #3B3E98;
+    align-items: center;
+    color: white;
+    margin-bottom: 10px;
+}
+
+#titel-container {
     display: flex;
     justify-content: center;
-    background-color: blue;
+    flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 10%;
 }
-form{
+
+form {
     width: 100%;
     height: 90%;
     display: flex;
@@ -44,70 +76,93 @@ form{
     justify-content: space-around;
     align-items: center;
 }
-.invoer_locatie{
-    height: 200px;
-    width: 50%;
+
+.invoer_locatie {
+    height: 25%;
+    width: 60%;
+    border-radius: 10%;
+    border: none;
 }
+
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    /* display: flex;
+    justify-content: center; */
+    text-align: center;
+    color: black;
+}
+
+.berekenKnop {
+    /* padding: 20px; */
+    color: black;
+    width: 140px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80%;
+    background-color: white;
+    border: white;
+}
+
+#bereken_knop_qry{
+    display: none;
+}
+
+.setting_knop {
+    color: black;
+    width: 140px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80%;
+    background-color: white;
+}
+
 
 /* voor de main_boven */
-.main_boven{
+
+.main_boven {
     width: 100%;
     height: 25%;
-    background-color: aqua;
+    background-color: white;
 }
 
-ul{
+ul {
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
 }
-.eenheid_button{
-    padding: 20px;
+
+.eenheid_button {
+    /* padding: 20px; */
+    color: white;
+    width: 140px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80%;
+    background-color: #3B3E98;
+    border: white;
 }
+
 
 /* alles voor de main_onder */
 
-.main_onder{
+.main_onder {
     width: 100%;
     height: 75%;
-    background-color: yellow; 
+    background-color: white;
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
 }
 
-#resultaat{
+#resultaat {
     font-size: 15vh;
 }
 
-
-
-@media only screen and (max-width: 600px) {
-    
-    #container{
-
-
-        flex-direction: column-reverse;
-        
-    }
-
-    nav{
-
-        width: 100%;
-
-    }
-
-    #resultaat{
-        color: red;
-    }
-
-    .container{
-        width: 100%;
-        height: 100vh;
-        /* background-color: antiquewhite; */
-    }
-    
-
-  }
