--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9,18 +9,21 @@ body {
     max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
+    min-height: 600px;
 }
 
 nav {
     height: 100vh;
     width: 25%;
     background-color: #3B3E98;
+    min-height: 300px;
 }
 
 #container {
     display: flex;
     height: 100vh;
     border-right: solid 10px #3B3E98;
+    /* min-height: 600px; */
 }
 
 #resultaat-container {
@@ -105,9 +108,6 @@ form {
     border: white;
 }
 
-#bereken_knop_qry{
-    display: none;
-}
 
 .setting_knop {
     color: black;
@@ -123,11 +123,6 @@ form {
 
 /* voor de main_boven */
 
-.main_boven {
-    width: 100%;
-    height: 25%;
-    background-color: white;
-}
 
 ul {
     display: flex;
@@ -139,14 +134,14 @@ ul {
 
 .eenheid_button {
     /* padding: 20px; */
-    color: white;
+    color: black;
     width: 140px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 80%;
-    background-color: #3B3E98;
+    background-color: white;
     border: white;
 }
 
@@ -155,12 +150,13 @@ ul {
 
 .main_onder {
     width: 100%;
-    height: 75%;
+    height: 100%;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 
 #resultaat {
     font-size: 15vh;
